# corba-playground

./: .gitignore  CMakeLists.txt  README.md
CMake/: FindomniORB4.cmake
Containers/: README.md  build.sh  docker-compose.yml
Containers/echoNsClient/: Dockerfile
Containers/echoNsServer/: Dockerfile
Containers/ns/: Dockerfile
echo/: CMakeLists.txt  echoClient.cpp  echoServer.cpp
echo-ns/: CMakeLists.txt  echoNsClient.cpp  echoNsServer.cpp
